js/develop/envoy.yaml

static_resources:
  listeners:
  - name: development
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          stream_idle_timeout: 0s  # Needed for streaming support.
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
                # This is the emulator endpoint for grpc requests.
              - match: { prefix: "/android.emulation.control" }
                route:
                   cluster: emulator_service_grpc
                   max_grpc_timeout: 2s
              - match: { prefix: "/" }
                route: { cluster: npm }
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: \*
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          # We setup a JWT authentication endpoint in front of the gRPC engine.
          # This will enforce JWT token validation before we forward the gRPC call
          - name: envoy.filters.http.jwt_authn
            config:
              providers:
                firebase_jwt:
                  issuer: https://securetoken.google.com/android-emulator-webrtc-demo
                  audiences:
                  - android-emulator-webrtc-demo
                  remote_jwks:
                    http_uri:
                      uri: https://www.googleapis.com/robot/v1/metadata/x509/securetoken@system.gserviceaccount.com
                      cluster: jwks_cluster
                      timeout: 60s
                    cache_duration:
                      seconds: 300
              rules:
              - match: { prefix: "android.emulation.control" }
                requires: { provider_name: "firebase_jwt" }
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: emulator_service_grpc
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 1
        keepalive_time: 10
        keepalive_interval: 10
    http2_protocol_options: {}
    load_assignment:
      cluster_name: emulator_service_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 8554
  - name: npm
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: npm
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 3000
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
